--- a/index.html
+++ b/index.html
@@ -159,7 +159,23 @@
         </div>
         <div class="right">
           <div class="one">
-            <p><img src="images/s4_img_1.jfif" alt="s4_img_1"></p>
+            <p><a href="#"><img src="images/s4_img_1.jfif" alt="s4_img_1"></a></p>
+            <div class="txt">
+              <img src="images/section4_textdeco.png" alt="section4_textdeco">
+              <p>[ 송 화 ] 저고리 - denim navy</p>
+              <p>121,000원</p>
+            </div>
+          </div>
+          <div class="two">
+            <p><a href="#"><img src="images/s4_img_1.jfif" alt="s4_img_1"></a></p>
+            <div class="txt">
+              <img src="images/section4_textdeco.png" alt="section4_textdeco">
+              <p>[ 송 화 ] 저고리 - denim navy</p>
+              <p>121,000원</p>
+            </div>
+          </div>
+          <div class="three">
+            <p><a href="#"><img src="images/s4_img_1.jfif" alt="s4_img_1"></a></p>
             <div class="txt">
               <img src="images/section4_textdeco.png" alt="section4_textdeco">
               <p>[ 송 화 ] 저고리 - denim navy</p>
