--- a/index2.html
+++ b/index2.html
@@ -3,32 +3,10 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>hanttam hanttam</title>
-	<link rel="stylesheet" href="css/jquery.fullPage.css">
+	<title>hanttam hanttam2</title>
   <link rel="stylesheet" href="css/style.css">
-	<style>
-	</style>
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-
-	<script src="js/scrolloverflow.js"></script>
-	<script src="js/jquery.fullPage.js"></script>
-
-	<script>
-		$(document).ready(function() {
-			$('#fullpage').fullpage({
-				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage','5thPage','6thPage','7thPage','8thPage','9thPage'],
-				//sectionsColor: ['#4A6FB1', '#939FAA', '#323539'],
-				scrollOverflow: true
-			});
-		});
-	</script>
 </head>
 <body>
-
-  
-
 
   <div id="header">
     <div class="logo">
@@ -47,7 +25,7 @@
     </ul>
   </div>
 
-  <div id="fullpage">
+  
     <!-- 0905_03_코웨이 learn 참고해서 변경예정 -->
     <div class="section " id="section0">
       <div class="slide" id="slide1">
@@ -181,8 +159,11 @@
               </div>
             </div>
             <div class="three">
-              <p><a href="#"><img src="images/s4_subimg_3.jpg" alt="s4_img_3"></a></p>
-              <p><a href="#"><img src="images/s4_subimg_4.jpg" alt="s4_img_4"></a></p>
+              <h3>Other color<span></span></h3>
+              <div class="otherimg">
+                <p><a href="#"><img src="images/s4_subimg_3.jpg" alt="s4_img_3"></a></p>
+                <p><a href="#"><img src="images/s4_subimg_4.jpg" alt="s4_img_4"></a></p>
+              </div>
             </div>
           </div>
         </div>
@@ -201,7 +182,6 @@
     <div class="section" id="section7">
       
     </div>
-  </div>
 
 </body>
 </html>
