--- a/index2.html
+++ b/index2.html
@@ -291,7 +291,42 @@
     </div>
 
     <div id="footer">
-
+      <ul class="left">
+        <li>
+          <p>company: 한땀한땀</p>
+          <p>owner: 김재은</p>
+          <p>business license: 608-33-77000</p>
+        </li>
+        <li>
+          <p>online buisness: 2023-고양일산동-1642 [사업자정보확인]</p>
+        </li>
+        <li>
+          <p>phone: 070-6263-2137</p>
+          <p>cpo: 김재은(wodms737@naver.com)</p>
+        </li>
+        <li>
+          <p>address: 10358 경기 고양시 일산동구 무궁화로187번길 42 한땀한땀</p>
+        </li>
+      </ul>
+      <ul class="right">
+        <li>
+          <p><a href="#">
+            <img src="images/icon_cacao_2.png" alt="cacao">
+          </a></p>
+          <p><a href="#">
+            <img src="images/icon_instar_2.png" alt="instar">
+          </a></p>
+          <p><a href="#">
+            <img src="images/icon_twitter_2.png" alt="twitter">
+          </a></p>
+        </li>
+        <li>
+          <p>© 한땀한땀</p>
+        </li>
+        <li>
+          <p>All rights reserved.</p>
+        </li>
+      </ul>
     </div>
 </body>
 </html>
