--- a/index2.html
+++ b/index2.html
@@ -191,7 +191,7 @@
               <p>121,000원</p>
             </div>
             <a href="#"><p><img src="images/s5_subimg_2.jpg" alt="s5_img_2"></p></a>
-            
+            <img class="cirWord" src="images/section5&7_circle-word.png" alt="s5_circleword">
           </div>
           <div class="three">
             <h3>Other color<span></span></h3>
@@ -262,7 +262,7 @@
               <p>121,000원</p>
             </div>
             <a href="#"><p><img src="images/s7_subimg_2.jpg" alt="s7_img_2"></p></a>
-            
+            <img class="cirWord" src="images/section5&7_circle-word.png" alt="s5_circleword">
           </div>
           <div class="three">
             <h3>Other color<span></span></h3>
@@ -296,15 +296,15 @@
     <div id="footer">
       <ul class="left">
         <li>
-          <p>company: 한땀한땀</p>
-          <p>owner: 김재은</p>
+          <p class="line">company: 한땀한땀</p>
+          <p class="line">owner: 김재은</p>
           <p>business license: 608-33-77000</p>
         </li>
         <li>
           <p>online buisness: 2023-고양일산동-1642 [사업자정보확인]</p>
         </li>
         <li>
-          <p>phone: 070-6263-2137</p>
+          <p class="line">phone: 070-6263-2137</p>
           <p>cpo: 김재은(wodms737@naver.com)</p>
         </li>
         <li>
