--- a/index2.html
+++ b/index2.html
@@ -142,7 +142,10 @@
         </div>
         <div class="right">
           <div class="one">
-            <a href="#"><p><img src="images/s4_subimg_1.jpg" alt="s4_img_1"></p></a>
+            <a href="#">
+              <p><img src="images/s4_subimg_1.jpg" alt="s4_img_1"></p>
+              <h4>view item</h4>
+            </a>
             <div class="txt">
               <img src="images/section4_textdeco.png" alt="section4_textdeco">
               <p>[ 송 화 ] 저고리 - denim navy</p>
@@ -155,13 +158,22 @@
               <p>[ 송 화 ] 저고리 - denim navy</p>
               <p>121,000원</p>
             </div>
-            <a href="#"><p><img src="images/s4_subimg_2.jpg" alt="s4_img_2"></p></a>
+            <a href="#">
+              <p><img src="images/s4_subimg_2.jpg" alt="s4_img_2"></p>
+              <h4>view item</h4>
+            </a>
           </div>
           <div class="three">
             <h3>Other color<span></span></h3>
             <div class="otherimg">
-              <a href="#"><p><img src="images/s4_subimg_3.jpg" alt="s4_img_3"></p></a>
-              <a href="#"><p><img src="images/s4_subimg_4.jpg" alt="s4_img_4"></p></a>
+              <a href="#">
+                <p><img src="images/s4_subimg_3.jpg" alt="s4_img_3"></p>
+                <h4>view item</h4>
+              </a>
+              <a href="#">
+                <p><img src="images/s4_subimg_4.jpg" alt="s4_img_4"></p>
+                <h4>view item</h4>
+              </a>
             </div>
           </div>
         </div>
@@ -177,7 +189,10 @@
         </div>
         <div class="right">
           <div class="one">
-            <a href="#"><p><img src="images/s5_subimg_1.jpg" alt="s5_img_1"></p></a>
+            <a href="#">
+              <p><img src="images/s5_subimg_1.jpg" alt="s5_img_1"></p>
+              <h4>view item</h4>
+            </a>
             <div class="txt">
               <img src="images/section5&7_textdeco.png" alt="section5_textdeco">
               <p>[ 송 화 ] 저고리 - denim navy</p>
@@ -190,14 +205,23 @@
               <p>[ 송 화 ] 저고리 - denim navy</p>
               <p>121,000원</p>
             </div>
-            <a href="#"><p><img src="images/s5_subimg_2.jpg" alt="s5_img_2"></p></a>
+            <a href="#">
+              <p><img src="images/s5_subimg_2.jpg" alt="s5_img_2"></p>
+              <h4>view item</h4>
+            </a>
             <img class="cirWord" src="images/section5&7_circle-word.png" alt="s5_circleword">
           </div>
           <div class="three">
             <h3>Other color<span></span></h3>
             <div class="otherimg">
-              <a href="#"><p><img src="images/s5_subimg_3.jpg" alt="s5_img_3"></p></a>
-              <a href="#"><p><img src="images/s5_subimg_4.jpg" alt="s5_img_4"></p></a>
+              <a href="#">
+                <p><img src="images/s5_subimg_3.jpg" alt="s5_img_3"></p>
+                <h4>view item</h4>
+              </a>
+              <a href="#">
+                <p><img src="images/s5_subimg_4.jpg" alt="s5_img_4"></p>
+                <h4>view item</h4>
+              </a>
             </div>
           </div>
         </div>
@@ -213,7 +237,10 @@
         </div>
         <div class="right">
           <div class="one">
-            <a href="#"><p><img src="images/s6_subimg_1.jpg" alt="s6_img_1"></p></a>
+            <a href="#">
+              <p><img src="images/s6_subimg_1.jpg" alt="s6_img_1"></p>
+              <h4>view item</h4>
+            </a>
             <div class="txt">
               <img src="images/section6_textdeco.png" alt="section6_textdeco">
               <p>[ 송 화 ] 저고리 - denim navy</p>
@@ -226,13 +253,22 @@
               <p>[ 송 화 ] 저고리 - denim navy</p>
               <p>121,000원</p>
             </div>
-            <a href="#"><p><img src="images/s6_subimg_2.jpg" alt="s6_img_2"></p></a>
+            <a href="#">
+              <p><img src="images/s6_subimg_2.jpg" alt="s6_img_2"></p>
+              <h4>view item</h4>
+            </a>
           </div>
           <div class="three">
             <h3>Other color<span></span></h3>
             <div class="otherimg">
-              <a href="#"><p><img src="images/s6_subimg_3.jpg" alt="s6_img_3"></p></a>
-              <a href="#"><p><img src="images/s6_subimg_4.jpg" alt="s6_img_4"></p></a>
+              <a href="#">
+                <p><img src="images/s6_subimg_3.jpg" alt="s6_img_3"></p>
+                <h4>view item</h4>
+              </a>
+              <a href="#">
+                <p><img src="images/s6_subimg_4.jpg" alt="s6_img_4"></p>
+                <h4>view item</h4>
+              </a>
             </div>
           </div>
         </div>
@@ -248,7 +284,10 @@
         </div>
         <div class="right">
           <div class="one">
-            <a href="#"><p><img src="images/s7_subimg_1.jpg" alt="s7_img_1"></p></a>
+            <a href="#">
+              <p><img src="images/s7_subimg_1.jpg" alt="s7_img_1"></p>
+              <h4>view item</h4>
+            </a>
             <div class="txt">
               <img src="images/section5&7_textdeco.png" alt="section7_textdeco">
               <p>[ 송 화 ] 저고리 - denim navy</p>
@@ -261,18 +300,30 @@
               <p>[ 송 화 ] 저고리 - denim navy</p>
               <p>121,000원</p>
             </div>
-            <a href="#"><p><img src="images/s7_subimg_2.jpg" alt="s7_img_2"></p></a>
+            <a href="#">
+              <p><img src="images/s7_subimg_2.jpg" alt="s7_img_2"></p>
+              <h4>view item</h4>
+            </a>
             <img class="cirWord" src="images/section5&7_circle-word.png" alt="s5_circleword">
           </div>
           <div class="three">
             <h3>Other color<span></span></h3>
             <div class="otherimg">
                   <div>
-                    <a href="#"><p><img src="images/s7_subimg_3.jpg" alt="s7_img_3"></p></a>
-                    <a href="#"><p><img src="images/s7_subimg_4.jpg" alt="s7_img_4"></p></a>
+                    <a href="#">
+                      <p><img src="images/s7_subimg_3.jpg" alt="s7_img_3"></p>
+                      <h4>view item</h4>
+                    </a>
+                    <a href="#">
+                      <p><img src="images/s7_subimg_4.jpg" alt="s7_img_4"></p>
+                      <h4>view item</h4>
+                    </a>
                   </div>
                   <div>
-                    <a href="#"><p><img src="images/s7_subimg_5.jpg" alt="s7_img_5"></p></a>
+                    <a href="#">
+                      <p><img src="images/s7_subimg_5.jpg" alt="s7_img_5"></p>
+                      <h4>view item</h4>
+                    </a>
                     <p></p>
                   </div>
             </div>
