--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <a href="#">
-              <p><img src="images/mp_best item1.jpg" alt="mp_best1"></p>
+              <p class="bestImg on"><img src="images/mp_best item1.jpg" alt="mp_best1"></p>
               <div class="txt">
                 <h4>[ 유 자 ] 저고리 - 레이스</h4>
                 <p>138,000원</p>
@@ -87,7 +87,7 @@
           </div>
           <div class="swiper-slide">
             <a href="#">
-              <p><img src="images/mp_best item2.jfif" alt="mp_best2"></p>
+              <p class="bestImg"><img src="images/mp_best item2.jfif" alt="mp_best2"></p>
               <div class="txt">
                 <h4>[ 꽃잎 무지기 ] - IVORY</h4>
                 <p>89,000원</p>
@@ -96,7 +96,7 @@
           </div>
           <div class="swiper-slide">
             <a href="#">
-              <p><img src="images/mp_best item3.jpg" alt="mp_best3"></p>
+              <p class="bestImg"><img src="images/mp_best item3.jpg" alt="mp_best3"></p>
               <div class="txt">
                 <h4>[ 오 월 ] 방령깃 저고리</h4>
                 <p>138,000원</p>
@@ -105,7 +105,7 @@
           </div>
           <div class="swiper-slide">
             <a href="#">
-              <p><img src="images/mp_best item4.jpg" alt="mp_best4"></p>
+              <p class="bestImg"><img src="images/mp_best item4.jpg" alt="mp_best4"></p>
               <div class="txt">
                 <h4>[ 만 덕 ] 저고리 - GREEN</h4>
               <p>129,000원</p>
@@ -114,7 +114,7 @@
           </div>
           <div class="swiper-slide">
             <a href="#">
-              <p><img src="images/mp_best item5.jfif" alt="mp_best5"></p>
+              <p class="bestImg"><img src="images/mp_best item5.jfif" alt="mp_best5"></p>
               <div class="txt">
                 <h4>폴라 워머 니트 - 옥색</h4>
                 <p>129,000원</p>
