--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,7 @@
 
     <div class="section" id="section1">
       <div class="s1">
-        <div class="left">
+        <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="700" class="left">
           <img src="images/section2_textdeco.png" alt="section2_textdeco">
           <p>
             계절을 초월하는 심플하고 잘 디자인된 옷.<br>
@@ -78,7 +78,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <a href="#">
-              <p class="bestImg on"><img src="images/mp_best item1.jpg" alt="mp_best1"></p>
+              <p class="bestImg"><img src="images/mp_best item1.jpg" alt="mp_best1"></p>
               <div class="txt">
                 <h4>[ 유 자 ] 저고리 - 레이스</h4>
                 <p>138,000원</p>
@@ -128,6 +128,7 @@
         </div>
         <div class="swiper-pagination"></div>
       </div>
+      <p class="circleWord"><img src="images/section3_circle_hanttam.png" alt="s3_circleWord"></p>
     </div>
 
     <div class="section" id="section3">
