--- a/index.0920.html
+++ b/index.0920.html
@@ -81,13 +81,15 @@
 				</div>
 			</div>
 			<div class="section" id="section2">
-				<!-- 0912_영풍문고 참고해서 변경예정 -->
 				<h1>Best items<span></span></h1>
-				<div class="swiper mySwiper2">
+				<div data-aos="fade-up" data-aos-delay="0"  class="swiper mySwiper2">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<a href="#">
-								<p class="bestImg"><img src="images/mp_best item1.jpg" alt="mp_best1"></p>
+								<div class="itemImg">
+									<p class="bestImg"><img src="images/mp_best item1.jpg" alt="mp_best1"></p>
+									<h4>view item</h4>
+								</div>
 								<div class="txt">
 									<h4>[ 유 자 ] 저고리 - 레이스</h4>
 									<p>138,000원</p>
@@ -96,7 +98,10 @@
 						</div>
 						<div class="swiper-slide">
 							<a href="#">
-								<p class="bestImg"><img src="images/mp_best item2.jfif" alt="mp_best2"></p>
+								<div class="itemImg">
+									<p class="bestImg"><img src="images/mp_best item2.jfif" alt="mp_best2"></p>
+									<h4>view item</h4>
+								</div>
 								<div class="txt">
 									<h4>[ 꽃잎 무지기 ] - IVORY</h4>
 									<p>89,000원</p>
@@ -105,7 +110,10 @@
 						</div>
 						<div class="swiper-slide">
 							<a href="#">
-								<p class="bestImg"><img src="images/mp_best item3.jpg" alt="mp_best3"></p>
+								<div class="itemImg">
+									<p class="bestImg"><img src="images/mp_best item3.jpg" alt="mp_best3"></p>
+									<h4>view item</h4>
+								</div>
 								<div class="txt">
 									<h4>[ 오 월 ] 방령깃 저고리</h4>
 									<p>138,000원</p>
@@ -114,7 +122,10 @@
 						</div>
 						<div class="swiper-slide">
 							<a href="#">
-								<p class="bestImg"><img src="images/mp_best item4.jpg" alt="mp_best4"></p>
+								<div class="itemImg">
+									<p class="bestImg"><img src="images/mp_best item4.jpg" alt="mp_best4"></p>
+									<h4>view item</h4>
+								</div>
 								<div class="txt">
 									<h4>[ 만 덕 ] 저고리 - GREEN</h4>
 								<p>129,000원</p>
@@ -123,7 +134,10 @@
 						</div>
 						<div class="swiper-slide">
 							<a href="#">
-								<p class="bestImg"><img src="images/mp_best item5.jfif" alt="mp_best5"></p>
+								<div class="itemImg">
+									<p class="bestImg"><img src="images/mp_best item5.jfif" alt="mp_best5"></p>
+									<h4>view item</h4>
+								</div>
 								<div class="txt">
 									<h4>폴라 워머 니트 - 옥색</h4>
 									<p>129,000원</p>
@@ -140,12 +154,15 @@
 				<p class="circleWord"><img src="images/section3_circle_hanttam.png" alt="s3_circleWord"></p>
 			</div>
 			<div class="section sec4" id="section3">
-				<!-- 반응형 playlife_learn 참고!! -->
 				<div class="lb_wrap s3 scrollable-element">
 					<div class="left">
 						<p class="l_bg"><img src="images/section4_bg_texture.jpg" alt="section4_bg_texture"></p>
 						<h1>Look Book</h1>
 						<p class="mainImg"><img src="images/lookbook_main_img1.png" alt="lookbook_main_img1"></p>
+						<div class="full">
+							<p><img src="images/lookbook_full1.png" alt="lookbook_full"></p>
+							<p><img src="images/section4 sticker.png" alt="stiker"></p>
+						</div>
 						<p class="logo"><img src="images/section4_logo.png" alt="section4_logo"></p>
 					</div>
 					<div class="right">
@@ -163,8 +180,8 @@
 						<div class="two">
 							<div class="txt">
 								<img src="images/section4_textdeco.png" alt="section4_textdeco">
-								<p>[ 송 화 ] 저고리 - denim navy</p>
-								<p>121,000원</p>
+								<p>[ 송 화 ] 벨트 허리치마 - denim navy</p>
+								<p>124,000원</p>
 							</div>
 							<a href="#">
 								<p><img src="images/s4_subimg_2.jpg" alt="s4_img_2"></p>
@@ -193,6 +210,10 @@
 						<p class="l_bg"><img src="images/section5_bg_texture.jpg" alt="section5_bg_texture"></p>
 						<h1>Look Book</h1>
 						<p class="mainImg"><img src="images/lookbook_main_img2.png" alt="lookbook_main_img2"></p>
+						<div class="full">
+							<p><img src="images/lookbook_full2.png" alt="lookbook_full"></p>
+							<p><img src="images/section5 sticker.png" alt="stiker"></p>
+						</div>
 						<p class="logo"><img src="images/section5_logo.png" alt="section5_logo"></p>
 					</div>
 					<div class="right">
@@ -203,15 +224,15 @@
 							</a>
 							<div class="txt">
 								<img src="images/section5&7_textdeco.png" alt="section5_textdeco">
-								<p>[ 송 화 ] 저고리 - denim navy</p>
-								<p>121,000원</p>
+								<p>[ 석 송 ] 저고리 - beige</p>
+								<p>168,000원</p>
 							</div>
 						</div>
 						<div class="two">
 							<div class="txt">
 								<img src="images/section5&7_textdeco.png" alt="section5_textdeco">
-								<p>[ 송 화 ] 저고리 - denim navy</p>
-								<p>121,000원</p>
+								<p>[ 석 송 ] 민소매탑 - beige</p>
+								<p>65,000원</p>
 							</div>
 							<a href="#">
 								<p><img src="images/s5_subimg_2.jpg" alt="s5_img_2"></p>
@@ -241,6 +262,10 @@
 						<p class="l_bg"><img src="images/section6_bg_texture.jpg" alt="section6_bg_texture"></p>
 						<h1>Look Book</h1>
 						<p class="mainImg"><img src="images/lookbook_main_img3.png" alt="lookbook_main_img3"></p>
+						<div class="full">
+							<p><img src="images/lookbook_full3.png" alt="lookbook_full"></p>
+							<p><img src="images/section6 sticker.png" alt="stiker"></p>
+						</div>
 						<p class="logo"><img src="images/section6_logo.png" alt="section6_logo"></p>
 					</div>
 					<div class="right">
@@ -251,15 +276,15 @@
 							</a>
 							<div class="txt">
 								<img src="images/section6_textdeco.png" alt="section6_textdeco">
-								<p>[ 송 화 ] 저고리 - denim navy</p>
-								<p>121,000원</p>
+								<p>[ 꽃잎 무지기 ] - pink red</p>
+								<p>89,000원</p>
 							</div>
 						</div>
 						<div class="two">
 							<div class="txt">
 								<img src="images/section6_textdeco.png" alt="section6_textdeco">
-								<p>[ 송 화 ] 저고리 - denim navy</p>
-								<p>121,000원</p>
+								<p>[ 마고자 ] - black</p>
+								<p>89,000원</p>
 							</div>
 							<a href="#">
 								<p><img src="images/s6_subimg_2.jpg" alt="s6_img_2"></p>
@@ -288,6 +313,10 @@
 						<p class="l_bg"><img src="images/section7_bg_texture.jpg" alt="section7_bg_texture"></p>
 						<h1>Look Book</h1>
 						<p class="mainImg"><img src="images/lookbook_main_img4.png" alt="lookbook_main_img4"></p>
+						<div class="full">
+							<p><img src="images/lookbook_full4.png" alt="lookbook_full"></p>
+							<p><img src="images/section7 sticker.png" alt="stiker"></p>
+						</div>
 						<p class="logo"><img src="images/section7_logo.png" alt="section7_logo"></p>
 					</div>
 					<div class="right">
@@ -298,15 +327,15 @@
 							</a>
 							<div class="txt">
 								<img src="images/section5&7_textdeco.png" alt="section7_textdeco">
-								<p>[ 송 화 ] 저고리 - denim navy</p>
-								<p>121,000원</p>
+								<p>[ 무지기 ] 상의 - 취람색</p>
+								<p>84,000원</p>
 							</div>
 						</div>
 						<div class="two">
 							<div class="txt">
 								<img src="images/section5&7_textdeco.png" alt="section7_textdeco">
-								<p>[ 송 화 ] 저고리 - denim navy</p>
-								<p>121,000원</p>
+								<p>[ 무지기 ] 하의 - 취람색</p>
+								<p>92,000원</p>
 							</div>
 							<a href="#">
 								<p><img src="images/s7_subimg_2.jpg" alt="s7_img_2"></p>
@@ -393,6 +422,8 @@
 				</ul>
 			</div>
 		</div>
+		<a id="MOVE_TOP_BTN" href="#">
+		</a>
 
     <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
