--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>hanttam hanttam2</title>
-  <link rel="stylesheet" href="css/style.0920.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/jquery.fullPage.css">
